# url_data_extractor

./: .env.example  LICENSE  README.md  llm_connector.py  llm_extraction.py  pyproject.toml  streamlit_app.py  util_extraction.py
data/: .~lock.furniture_stores_pages.csv#  furniture_stores_extracted.csv  furniture_stores_pages.csv  furniture_stores_pages_preprocessed.csv
notebooks/: extraction_notebook.ipynb  json_result01.json
